2019-06-10  Peter Stephenson  <p.stephenson@samsung.com>

	* Eitan Adler: 44409: config.guess, config.sub: update to
	2019-05-28.

2019-06-06  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Stephane (44387, edited): Doc/Zsh/restricted.yo: Describe some
	problems with restricted mode.

2019-06-03  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 44389: Completion/BSD/Type/_bsd_disks,
	Completion/BSD/Type/_fbsd_device_types,
	Completion/Unix/Command/_iostat, Completion/Unix/Command/_vmstat:
	update _iostat and _vmstat for BSD

2019-05-28  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 44361: Src/pattern.c: Ensure variables used recursively are
	initialised in pattern matching.

2019-05-28  Peter Stephenson  <p.stephenson@samsung.com>

	* Jim Murphy: 44364: Doc/Zsh/intro.yo: refer to main zsh page in
	zshall doc.

2019-05-23  Oliver Kiddle  <okiddle@yahoo.co.uk>

	* unposted: Completion/Linux/Command/_iptables: remove spurious
	reference to nonexistent completion function

	* 44349: Completion/Linux/Command/_cryptsetup,
	Completion/X/Command/_x_utils, Completion/Linux/Command/_lsblk,
	Completion/Linux/Command/_ss, Completion/Linux/Command/_valgrind,
	Completion/Linux/Command/_strace, Completion/Unix/Command/_bash,
	Completion/Unix/Command/_dhclient, Completion/Unix/Command/_dig,
	Completion/Unix/Command/_entr, Completion/Unix/Command/_env,
	Completion/Unix/Command/_gem, Completion/Unix/Command/_gnutls,
	Completion/Unix/Command/_links, Completion/Unix/Command/_nm,
	Completion/Unix/Command/_objdump, Completion/Unix/Command/_ruby,
	Completion/Unix/Command/_sed, Completion/Unix/Command/_sqlite,
	Completion/Unix/Command/_ssh, Completion/Unix/Command/_tiff,
	Completion/Unix/Command/_tree, Completion/Unix/Command/_wget,
	Completion/Linux/Command/_ethtool: completion option updates

	* 44345: Src/text.c, Test/A01grammar.ztst: fix wordcode traversal
	where ! without a following command could result in a crash

2019-05-20  Oliver Kiddle  <okiddle@yahoo.co.uk>
